force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/Potential_Assessment__c.object-meta.xml
<CustomObject>
    <label>Potential Assessment</label>
    <nameField>
        <label>Equipment</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Assessment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>