force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/Est_Unit_Rate__c.field-meta.xml
<CustomField>
    <fullName>Est_Unit_Rate__c</fullName>
    <label>Est Unit Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>