force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/Fleet_Nos__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Nos__c</fullName>
    <label>Fleet Nos</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>