force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/Make_Ton_Motive_power_Diesel_Gas_Elect__c.field-meta.xml
<CustomField>
    <fullName>Make_Ton_Motive_power_Diesel_Gas_Elect__c</fullName>
    <label>Make/Ton /Motive power (Diesel/Gas/Elect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>