force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/Product_Targeted__c.field-meta.xml
<CustomField>
    <fullName>Product_Targeted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Targeted</label>
    <referenceTo>Products_Targeted__c</referenceTo>
    <relationshipLabel>Potential Assessment</relationshipLabel>
    <relationshipName>Potential_Assessment</relationshipName>
    <type>Lookup</type>
</CustomField>