force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/Qty_Annum__c.field-meta.xml
<CustomField>
    <fullName>Qty_Annum__c</fullName>
    <label>Qty/Annum</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>