force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/SIZE_RW_PR_BRAND__c.field-meta.xml
<CustomField>
    <fullName>SIZE_RW_PR_BRAND__c</fullName>
    <label>SIZE- RW-PR-BRAND</label>
    <length>100</length>
    <type>Text</type>
</CustomField>