force-app/force-app/force-app/main/default/objects/Potential_Assessment__c/fields/Tyre_Size_Front_Rear__c.field-meta.xml
<CustomField>
    <fullName>Tyre_Size_Front_Rear__c</fullName>
    <label>Tyre Size ( Front / Rear)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>